--- a/styl/main.styl
+++ b/styl/main.styl
@@ -140,6 +140,12 @@ h3
   &:after 
     background rgba(#0ead15, .6)
 
+.keyzen
+  .creation__overlay
+    background rgba(#0bb667, .05)
+  &:after 
+    background rgba(#0bb667, .8)
+
 .equipot
   .creation__overlay
     background rgba(#FF5722, .05)
