--- a/jade/index.jade
+++ b/jade/index.jade
@@ -10,16 +10,73 @@ block content
     h1 Lab
     h3.credits By <a href="http://nmn.gl/">Namanyay Goel</a>
 
+  - var simulatorSeriesText = "is part of my Physics Simulator series, where I simulate various physical phenomena using JavaScript. I made multiple works in this series during my final years of high school, both to get a better understanding of the mathematics and to perhaps help some of my friends as well."
+
   .creations
     - for (var i = 0; i < data.length; i++) {
       - var c = data[i]
-      .creation(class="#{c.key}" data-type="#{c.type}")
-        a(href=c.href)
-          .creation__overlay
-          .creation__img
+      .creation(class=c.key data-type=c.type)
+        .creation__img
+          a(href=c.href)
             img(src="img/#{c.key}.png")
-          .creation__text
-            .creation__name #{c.name} <span class="type">#{c.type}</span>
+            .creation__overlay
+
+        .creation__content
+          h2.creation__name
+            a(href=c.href) #{c.name}
+          footer
+            span.creation__type #{c.type}
+            .creation__date-and-age(data-created-at=c.createdAt)
+              | Created&nbsp;
+              span.date &hellip;
+              |  (Age&nbsp;
+              span.age &hellip;
+              | )
+          article
+              - if (c.key == "lccpp")
+                p I always felt frustrated at the study material for my 11<sup>th</sup> grade Computer Science course, which was an introduction to C++. I believed there was a massive improvement to be made by re-organizing the structure and steps of the course.
+                p So I did just that. While finishing my 11<sup>th</sup> grade, I wrote a book called "Less Confusing C++" to teach the coursework in my style. Since the target audience was my peers, I made sure that the book is available for free.
+
+              - if (c.key == "keyzen")
+                p I made this game for a hackathon in a few hours. It was around a time when I was obssessed with improving my typing speed, following the logic that faster typing = faster programming.
+                p I wanted to make soft, "biteable", pastel aesthetics. I remember that I especially enjoyed making and animating the keyboard. Keyzen took home the first prize that day.
+
+              - if (c.key == "diode")
+                p <em>&ldquo;Diode&rdquo; #{ simulatorSeriesText }</em>
+                p When I first studied them, the workings of a diode and their &ldquo;depletion region&rdquo; confused me. Given how essential they are for computing, I wanted to understand them better. Making this simulation helped.
+
+              - if (c.key == "acgen")
+                p <em>&ldquo;AC Gen&rdquo; #{ simulatorSeriesText }</em>
+                p Current electricity was one of my favourite topics in High School Physics. I they look beautiful while operating so I made this simulation.
+
+              - else if (c.key == "collisions")
+                p <em>&ldquo;Collisions&rdquo; #{ simulatorSeriesText }</em>
+                p This one is a simulation of two dimensional elastic collisions, where I chose to demonstrate how the particles in a low density gas might collide.
+
+              - else if (c.key == "bandc")
+                p We were given the option of studying this game and produce a research paper for the <a href="https://coreisus.com/">COЯE</a> hackathon. We were given only 48 hours to prepare it. 
+                p My co-founder <a href="https://in.linkedin.com/in/adityag9">Aditya</a> and I figured out the working for the game and the optimal algorithms to solve it, and drafted a <a href="https://vixra.org/pdf/1601.0302v1.pdf">quick research paper</a> (using LaTeX for the first time here was a pleasant experience and it introduced me to a new tool).
+                p After figuring out the game&rsquo;s algorithms, I decided to code it up as a JavaScript game for a demo, as I am always fond of practical explanations vs text.
+                p We took home the first prize that day.
+
+              - else if (c.key == "acgraphs")
+                p <em>&ldquo;AC Graphs&rdquo; #{ simulatorSeriesText }</em>
+                p I loved the idea of the components of an AC circuit always being out of phase and how beautiful their graphs looked. Plus, I thought this would be a fun thing to animate.
+
+              - else if (c.key == "equipot")
+                p <em>&ldquo;Equipot&rdquo; #{ simulatorSeriesText }</em>
+                p Equipotential surfaces for equal charges were seen in my textbook, but I didn&rsquo;t notice one with a positive and equally opposite negative charge. So, I decided to make one.
+
+              - else if (c.key == "shm-simulator")
+                p <em>&ldquo;SHM Simulators&rdquo; #{ simulatorSeriesText }</em>
+                p My earliest simulation, the one where it all began. I just knew that simple harmonic motion would be fun to look at animated, so I made a simulation where I could easily tinker with the variables and see the formulas.
+
+            footer
+              a(href=c.href).creation__link Visit Project
+              - if (!c.isClosedSource)
+                .creation__source
+                  a(href="https://github.com/namanyayg/#{c.key}") Source on Github
+
     - }
 
   script.
