--- a/jade/templates/_layout.jade
+++ b/jade/templates/_layout.jade
@@ -18,6 +18,7 @@ head
 	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
 	//if lt IE 9
 		script(src='//html5shiv.googlecode.com/svn/trunk/html5.js')
+	script(src='js/main.js')
 	block title
 
 body
