--- a/jade/index.jade
+++ b/jade/index.jade
@@ -33,6 +33,10 @@ block content
                 p I always felt frustrated at the study material for my 11<sup>th</sup> grade Computer Science course, which was an introduction to C++. I believed there was a massive improvement to be made by re-organizing the structure and steps of the course.
                 p So I did just that. While finishing my 11<sup>th</sup> grade, I wrote a book called "Less Confusing C++" to teach the coursework in my style. Since the target audience was my peers, I made sure that the book is available for free.
 
+              - if (c.key == "webstiles")
+                p I made webstiles around the time when I first started working on client projects. Webstiles was born out of a need to have an easy to understand and easy to use way to share design prototyping ideas with clients.
+                p Webstiles soon became [a core part of my workflow](https://nmn.gl/blog/my-workflow-when-working-with-clients). My clients loved seeing multiple different Webstiles to choose from, and it also seemed to be well-received on Reddit and HN.
+
               - if (c.key == "keyzen")
                 p I made this game for a hackathon in a few hours. It was around a time when I was obssessed with improving my typing speed, following the logic that faster typing = faster programming.
                 p I wanted to make soft, "biteable", pastel aesthetics. I remember that I especially enjoyed making and animating the keyboard. Keyzen took home the first prize that day.
