--- a/styl/main.styl
+++ b/styl/main.styl
@@ -216,7 +216,7 @@ a
   color: $color--alt-bg-text--light;
 
   p {
-    margin-bottom: $spacing-unit / 2;
+    margin: 1.5rem 0;
   }
 }
 
@@ -405,5 +405,5 @@ creation-style(color)
     font-size 1em
 
 @media (max-width 35em)
-  body
+  .creations
     font-size 100%
