use font features

--- a/styl/main.styl
+++ b/styl/main.styl
@@ -19,6 +19,7 @@ body
   font-size 125%
   color #353535
   line-height 1.5
+  font-feature-settings "kern" 1, "liga" 1, "pnum" 1, "tnum" 0, "onum" 1, "lnum" 0, "dlig" 0
 
 $text-color = desaturate(#0a3d5d, 60%)
 $brand-color = #2996ff
