--- a/css/main.css
+++ b/css/main.css
@@ -177,6 +177,7 @@ body {
   font-size: 125%;
   color: #353535;
   line-height: 1.5;
+  font-feature-settings: "kern" 1, "liga" 1, "pnum" 1, "tnum" 0, "onum" 1, "lnum" 0, "dlig" 0;
 }
 h1,
 h2,
