--- a/jade/index.jade
+++ b/jade/index.jade
@@ -35,7 +35,7 @@ block content
 
               - if (c.key == "webstiles")
                 p I made webstiles around the time when I first started working on client projects. Webstiles was born out of a need to have an easy to understand and easy to use way to share design prototyping ideas with clients.
-                p Webstiles soon became [a core part of my workflow](https://nmn.gl/blog/my-workflow-when-working-with-clients). My clients loved seeing multiple different Webstiles to choose from, and it also seemed to be well-received on Reddit and HN.
+                p Webstiles soon became <a href="https://nmn.gl/blog/my-workflow-when-working-with-clients">a core part of my workflow</a>. My clients loved seeing multiple different Webstiles to choose from, and it also seemed to be well-received on Reddit and HN.
 
               - if (c.key == "keyzen")
                 p I made this game for a hackathon in a few hours. It was around a time when I was obssessed with improving my typing speed, following the logic that faster typing = faster programming.
