--- a/jade/templates/_layout.jade
+++ b/jade/templates/_layout.jade
@@ -71,4 +71,4 @@ body
 					| &copy; Copyright 
 					time 2015
 					| &thinsp;&ndash;&thinsp;
-					time(datetime='#{ new Date() }') #{ new Date().getFullYear() }
+					time(datetime='#{ new Date().getFullYear() }') #{ new Date().getFullYear() }
