--- a/styl/main.styl
+++ b/styl/main.styl
@@ -261,6 +261,9 @@ h3
   a
     text-decoration none
 
+  strong
+    font-weight 400
+
   &__img
     position relative
     width calc(50% - 1em)
@@ -359,12 +362,17 @@ creation-style(color)
     border-color color
   .creation__link
     background color
+  .creation__name a
+    color color
 
 .collisions
   creation-style #0ead15
 
 .webstiles
   creation-style #0e90eb
+
+.indiasmile
+  creation-style #54a0ff
 
 .keyzen
   creation-style #0bb667
@@ -376,7 +384,7 @@ creation-style(color)
   creation-style #3F51B5
 
 .lccpp
-  creation-style #2979FF
+  creation-style #ffa700
 
 .shm-simulator
   creation-style #9C27B0
